Audio not in synch when the blend file loads. #39607

Closed
opened 2014-04-05 12:51:09 +02:00 by Maverick · 12 comments

System Information
win64 i7 gtx titan

Blender Version
blender-2.70-6aa75d3-win64

Short description of error
When blender loads the blend file the audio is not in synch on the first alt+a playing.

Exact steps for others to reproduce the error
Check the attached file. Load and press alt+a. You hear "zero" instead of "three".
Press ESC and then press alt+a again. Now the audio is in synch and you hear "three".

Thank you.audio_not_in_sync_on_first_load.blend

**System Information** win64 i7 gtx titan **Blender Version** blender-2.70-6aa75d3-win64 **Short description of error** When blender loads the blend file the audio is not in synch on the first alt+a playing. **Exact steps for others to reproduce the error** Check the attached file. Load and press alt+a. You hear "zero" instead of "three". Press ESC and then press alt+a again. Now the audio is in synch and you hear "three". Thank you.[audio_not_in_sync_on_first_load.blend](https://archive.blender.org/developer/F84004/audio_not_in_sync_on_first_load.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2014-04-06 20:26:07 +02:00

This issue was referenced by blender/blender-addons-contrib@9f17300d37

This issue was referenced by blender/blender-addons-contrib@9f17300d378f1905dbeeceb25a49a17fd256f9f2

This issue was referenced by 9f17300d37

This issue was referenced by 9f17300d378f1905dbeeceb25a49a17fd256f9f2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 9f17300d37.

Closed by commit 9f17300d37.

This issue was referenced by blender/blender-addons-contrib@9351e872f5

This issue was referenced by blender/blender-addons-contrib@9351e872f5317a5690ecdaeaf9dd9db5e1558cfc

This issue was referenced by 9351e872f5

This issue was referenced by 9351e872f5317a5690ecdaeaf9dd9db5e1558cfc
Bastien Montagne was unassigned by Joerg Mueller 2014-04-15 19:21:22 +02:00
Joerg Mueller self-assigned this 2014-04-15 19:21:22 +02:00
Member

I fixed the actual problem. @mont29 next time please don't commit a hack, instead just assign the bug to me or at least talk to me before you want to commit something like that!

I fixed the actual problem. @mont29 next time please don't commit a hack, instead just assign the bug to me or at least talk to me before you want to commit something like that!

Added subscriber: @neXyon

Added subscriber: @neXyon

@neXyon sorry, just thought audaspace itself was kind of freezed… my bad.

@neXyon sorry, just thought audaspace itself was kind of freezed… my bad.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39607
No description provided.