intern/audaspace/intern/AUD_AnimateableProperty.h
@@ -76,6 +76,13 @@ public:
 	AUD_AnimateableProperty(int count = 1);
 
 	/**
+	 * Creates a new animateable property.
+	 * \param count The count of floats for a single property.
+	 * \param count The value that the property should get initialized with. All count floats will be initialized to the same value.
+	 */
+	AUD_AnimateableProperty(int count, float value);
+
+	/**
 	 * Destroys the animateable property.
 	 */
 	~AUD_AnimateableProperty();
